Fix alignment of search bar and search button

--- a/styles/shared/amazon-header.css
+++ b/styles/shared/amazon-header.css
@@ -65,15 +65,18 @@
   margin-left: 10px;
   margin-right: 10px;
   display: flex;
+  box-sizing: border-box;
+
 }
 
 .search-bar {
   flex: 1;
   width: 0;
   font-size: 16px;
-  height: 38px;
+  height: 40px;
   padding-left: 15px;
   border: none;
+  line-height: 38px;
   border-top-left-radius: 4px;
   border-bottom-left-radius: 4px;
   border-top-right-radius: 0;
@@ -85,9 +88,20 @@
   border: none;
   width: 45px;
   height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   border-top-right-radius: 4px;
   border-bottom-right-radius: 4px;
   flex-shrink: 0;
+}
+
+input, button, select, textarea {
+  font-size: 16px;
+  -webkit-appearance: none;
+  appearance: none;
+  border-radius: 0;
+  box-sizing: border-box;
 }
 
 .search-icon {
